Fix z-index and focus outline in individual row editor dialog

--- a/django/metadata_categorization/metadata_categorization/static/metadata_categorization/style.css
+++ b/django/metadata_categorization/metadata_categorization/static/metadata_categorization/style.css
@@ -18,3 +18,7 @@ body {
 .hidden {
 	display: none;
 }
+
+.ui-dialog {
+	z-index: 1000;
+}
